list for book, author, user
